--- a/src/sass/components/_itemList.sass
+++ b/src/sass/components/_itemList.sass
@@ -28,6 +28,8 @@
     +noPaddingMargin
 
 .itemList_list
+  &, .item_card
+    transition: .4s
   .item_card
     width: 12rem
     height: 20rem
